# ordermyphones-platform

./: .gitignore  .vercelignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  vercel.json
apps/web/: .dockerignore  .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
docs/ai/: AGENT-SWARM-OVERVIEW.md  AGENTS-ROSTER.md  EVAL-AND-GUARDRAILS.md  ORCHESTRATOR.md
docs/architecture/: AUTH-AND-RLS.md  DATA-MODEL.md  DEPLOYMENT.md  OBSERVABILITY.md  PRICING-ENGINE.md  SYSTEM-OVERVIEW.md
docs/contract/: SOFTWARE_DEVELOPMENT_AGREEMENT.md
docs/integrations/: SHIPMENT-TRACKING.md  STRIPE.md  SUPPLIER-SOURCE-1.md  SUPPLIER-SOURCE-2.md
docs/phases/: PHASE-1-DISCOVERY-AND-DESIGN.md  PHASE-2-BACKEND-AND-INTEGRATIONS.md  PHASE-3-FRONTEND-AND-PORTAL.md  PHASE-4-QA-AND-DEPLOYMENT.md  README.md
docs/security/: COMPLIANCE.md  DATA-CLASSIFICATION.md  THREAT-MODEL.md
docs/ux/: ADMIN-DASHBOARD.md  CUSTOMER-PORTAL.md  INFORMATION-ARCHITECTURE.md
infra/: Caddyfile
services/ai-api/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
services/ai-api/src/: orchestrator.ts  server.ts
services/supplier-source-1/: .env.example  Dockerfile  README.md  pyproject.toml
services/supplier-source-1/src/supplier_source_1/: __init__.py  __main__.py  adapter.py  client.py  config.py  models.py  scraper.py  supabase_writer.py  sync.py
services/supplier-source-2/: .env.example  Dockerfile  README.md  pyproject.toml
services/supplier-source-2/docs/: ROUTING.md
services/supplier-source-2/src/supplier_source_2/: __init__.py  __main__.py  adapter.py  config.py  models.py  routing.py  supabase_writer.py  sync.py
services/supplier-source-2/src/supplier_source_2/feeds/: __init__.py  dubai_wholesale.py  us_dropship.py
supabase/: README.md  config.toml  seed.sql
supabase/migrations/: 0001_initial_schema.sql  0002_rls_policies.sql  0003_pricing_tiers.sql  0004_supplier_sync.sql  0005_audit_log.sql
tooling/image-gen/: generate.mjs  manifest.mjs
(+98 files in other folders)
